option('mapper-busname', type: 'string',
       value: 'xyz.openbmc_project.ObjectMapper',
       description: 'The object mapper busname.')
option('mapper-path', type: 'string',
       value: '/xyz/openbmc_project/object_mapper',
       description: 'The object mapper object path.')
option('mapper-interface', type: 'string',
       value: 'xyz.openbmc_project.ObjectMapper',
       description: 'The object mapper interface.')

option('systemd-properties-interface', type: 'string',
       value: 'org.freedesktop.DBus.Properties',
       description: 'The systemd properties interface.')

option('software-objpath', type: 'string',
       value: '/xyz/openbmc_project/software',
       description: 'The software manager Dbus root.')

option('activation-iface', type: 'string',
       value: 'xyz.openbmc_project.Software.Activation',
       description: 'The software activation interface.')
option('version-iface', type: 'string',
       value: 'xyz.openbmc_project.Software.Version',
       description: 'The software version interface.')
option('extended-version-iface', type: 'string',
       value: 'xyz.openbmc_project.Software.ExtendedVersion',
       description: 'The software extended version interface.')

option('reboot-guard-enable', type: 'string',
       value: 'reboot-guard-enable.service',
       description: 'The systemd service to lock the BMC rebooting')
option('reboot-guard-disable', type: 'string',
       value: 'reboot-guard-disable.service',
       description: 'The systemd service to unlock the BMC rebooting')

option('hiomapd-path', type: 'string',
       value: '/xyz/openbmc_project/Hiomapd',
       description: 'The hiomapd object path.')
option('hiomapd-iface', type: 'string',
       value: 'xyz.openbmc_project.Hiomapd.Control',
       description: 'The hiomapd control interface.')

option('systemd-busname', type: 'string',
       value: 'org.freedesktop.systemd1',
       description: 'The systemd busname.')
option('systemd-path', type: 'string',
       value: '/org/freedesktop/systemd1',
       description: 'The systemd object path.')
option('systemd-interface', type: 'string',
       value: 'org.freedesktop.systemd1.Manager',
       description: 'The systemd management interface.')
