option('mapper-busname', type: 'string',
       value: 'xyz.openbmc_project.ObjectMapper',
       description: 'The object mapper busname.')
option('mapper-path', type: 'string',
       value: '/xyz/openbmc_project/object_mapper',
       description: 'The object mapper object path.')
option('mapper-interface', type: 'string',
       value: 'xyz.openbmc_project.ObjectMapper',
       description: 'The object mapper interface.')

option('systemd-properties-interface', type: 'string',
       value: 'org.freedesktop.DBus.Properties',
       description: 'The systemd properties interface.')

option('software-objpath', type: 'string',
       value: '/xyz/openbmc_project/software',
       description: 'The software manager Dbus root.')

option('activation-iface', type: 'string',
       value: 'xyz.openbmc_project.Software.Activation',
       description: 'The software activation interface.')
option('version-iface', type: 'string',
       value: 'xyz.openbmc_project.Software.Version',
       description: 'The software version interface.')
option('extended-version-iface', type: 'string',
       value: 'xyz.openbmc_project.Software.ExtendedVersion',
       description: 'The software extended version interface.')

option('reboot-guard-enable', type: 'string',
       value: 'reboot-guard-enable.service',
       description: 'The systemd service to lock the BMC rebooting')
option('reboot-guard-disable', type: 'string',
       value: 'reboot-guard-disable.service',
       description: 'The systemd service to unlock the BMC rebooting')

option('openpower-support', type: 'boolean', value: true,
       description: 'Enable support for OpenPOWER firmwares')

option('chassis-state-path', type: 'string',
       value: '/xyz/openbmc_project/state/chassis0',
       description: 'The chassis state path.')
option('chassis-state-iface', type: 'string',
       value: 'xyz.openbmc_project.State.Chassis',
       description: 'The chassis state interface.')
option('chassis-state-off', type: 'string',
       value: 'xyz.openbmc_project.State.Chassis.PowerState.Off',
       description: 'The chassis state off property value.')

option('hiomapd-path', type: 'string',
       value: '/xyz/openbmc_project/Hiomapd',
       description: 'The hiomapd object path.')
option('hiomapd-iface', type: 'string',
       value: 'xyz.openbmc_project.Hiomapd.Control',
       description: 'The hiomapd control interface.')

option('pflash-cmd', type: 'string', value: 'pflash',
       description: 'command line tool to manipulate PNOR flash')
option('pnor-file-ext', type: 'string', value: '.pnor',
       description: 'The extension of the PNOR firmware image file.')

option('systemd-busname', type: 'string',
       value: 'org.freedesktop.systemd1',
       description: 'The systemd busname.')
option('systemd-path', type: 'string',
       value: '/org/freedesktop/systemd1',
       description: 'The systemd object path.')
option('systemd-interface', type: 'string',
       value: 'org.freedesktop.systemd1.Manager',
       description: 'The systemd management interface.')

option('os-release-file', type: 'string', value: '/etc/os-release',
       description: 'The name of the BMC table of contents file.')
option('manifest-file-name', type: 'string', value: 'MANIFEST',
       description: 'The name of the MANIFEST file.')
option('publickey-file-name', type: 'string', value: 'publickey',
       description: 'The name of the public key file.')
option('hash-file-name', type: 'string', value: 'hashfunc',
       description: 'The name of the hash file.')
option('signed-image-conf-path', type: 'string', value: '/etc/activationdata',
       description: 'Path of public key and hash function files.')
option('signature-file-ext', type: 'string', value: '.sig',
       description: 'The extension of the Signature file.')

option('openbmc-flash-path', type: 'string', value: '/run/initramfs',
       description: 'The path where from the OpenBMC image will be flashed.')
option('openbmc-whitelist-file-name', type: 'string', value: 'whitelist',
       description: 'The OpenBMC whilte file name.')
