option('mapper-busname', type: 'string',
       value: 'xyz.openbmc_project.ObjectMapper',
       description: 'The object mapper busname.')
option('mapper-path', type: 'string',
       value: '/xyz/openbmc_project/object_mapper',
       description: 'The object mapper object path.')
option('mapper-interface', type: 'string',
       value: 'xyz.openbmc_project.ObjectMapper',
       description: 'The object mapper interface.')

option('systemd-properties-interface', type: 'string',
       value: 'org.freedesktop.DBus.Properties',
       description: 'The systemd properties interface.')

option('software-objpath', type: 'string',
       value: '/xyz/openbmc_project/software',
       description: 'The software manager Dbus root.')

option('activation-iface', type: 'string',
       value: 'xyz.openbmc_project.Software.Activation',
       description: 'The software activation interface.')
option('version-iface', type: 'string',
       value: 'xyz.openbmc_project.Software.Version',
       description: 'The software version interface.')
option('extended-version-iface', type: 'string',
       value: 'xyz.openbmc_project.Software.ExtendedVersion',
       description: 'The software extended version interface.')

option('reboot-guard-support', type: 'boolean', value: false,
       description: 'Enable support for BMC reboot guard')
option('reboot-guard-enable', type: 'string',
       value: 'reboot-guard-enable.service',
       description: 'The systemd service to lock the BMC rebooting')
option('reboot-guard-disable', type: 'string',
       value: 'reboot-guard-disable.service',
       description: 'The systemd service to unlock the BMC rebooting')

option('host-image-type', type: 'combo',
       choices: [ 'openpower', 'intel-c62x', 'none' ],
       description: 'The Host firmware image type')
option('intel-x722-support', type: 'boolean', value: false,
       description: 'Enable support for Intel X722 Network Adapter')
option('golden-flash-support', type: 'boolean', value: false,
       description: 'Enable support for alternate flash chip')
option('pch-power-pin', type: 'string', value: 'PWRGD_DSW_PWROK',
       description: 'Name of GPIO managing PCH power')
option('pch-power-down-value', type: 'integer', min: 0, max: 1, value: 0,
       description: 'GPIO Value to switch PCH power down')

option('chassis-state-path', type: 'string',
       value: '/xyz/openbmc_project/state/chassis0',
       description: 'The chassis state path.')
option('chassis-state-iface', type: 'string',
       value: 'xyz.openbmc_project.State.Chassis',
       description: 'The chassis state interface.')
option('chassis-state-off', type: 'string',
       value: 'xyz.openbmc_project.State.Chassis.PowerState.Off',
       description: 'The chassis state off property value.')

option('hiomapd-path', type: 'string',
       value: '/xyz/openbmc_project/Hiomapd',
       description: 'The hiomapd object path.')
option('hiomapd-iface', type: 'string',
       value: 'xyz.openbmc_project.Hiomapd.Control',
       description: 'The hiomapd control interface.')

option('pnor-file-ext', type: 'string', value: '.pnor',
       description: 'The extension of the PNOR firmware image file.')

option('systemd-busname', type: 'string',
       value: 'org.freedesktop.systemd1',
       description: 'The systemd busname.')
option('systemd-path', type: 'string',
       value: '/org/freedesktop/systemd1',
       description: 'The systemd object path.')
option('systemd-interface', type: 'string',
       value: 'org.freedesktop.systemd1.Manager',
       description: 'The systemd management interface.')

option('os-release-file', type: 'string', value: '/etc/os-release',
       description: 'The name of the BMC table of contents file.')
option('manifest-file-name', type: 'string', value: 'MANIFEST',
       description: 'The name of the MANIFEST file.')
option('publickey-file-name', type: 'string', value: 'publickey',
       description: 'The name of the public key file.')
option('hash-file-name', type: 'string', value: 'hashfunc',
       description: 'The name of the hash file.')
option('signed-image-conf-path', type: 'string', value: '/etc/activationdata',
       description: 'Path of public key and hash function files.')
option('signature-file-ext', type: 'string', value: '.sig',
       description: 'The extension of the Signature file.')

option('bmc-image-type', type: 'combo',
       choices: [ 'obmc-phosphor-image', 'intel-platforms' ],
       description: 'The BMC image type')
option('openbmc-flash-path', type: 'string', value: '/run/initramfs',
       description: 'The path where from the OpenBMC image will be flashed.')
option('openbmc-whitelist-file-name', type: 'string', value: 'whitelist',
       description: 'The OpenBMC whilte file name.')

option('tar-cmd', type: 'string', value: '/bin/tar',
       description: 'command line tool to work with TAR archieve')
option('reboot-cmd', type: 'string', value: '/sbin/reboot',
       description: 'command line tool to reboot system')
option('fw-setenv-cmd', type: 'string', value: '/sbin/fw_setenv',
       description: 'command line tool to update u-boot variables')
option('fw-printenv-cmd', type: 'string', value: '/sbin/fw_printenv',
       description: 'command line tool to read u-boot variables')

option('flashcp-cmd', type: 'string', value: '/usr/sbin/flashcp',
       description: 'command line tool to write flash')
option('flash-erase-cmd', type: 'string', value: '/usr/sbin/flash_erase',
       description: 'command line tool to erase flash')
option('nanddump-cmd', type: 'string', value: '/usr/sbin/nanddump',
       description: 'command line tool to dump NAND MTD partition')
option('nandwrite-cmd', type: 'string', value: '/usr/sbin/nandwrite',
       description: 'command line tool to write NAND MTD partition')
option('pflash-cmd', type: 'string', value: '/usr/sbin/pflash',
       description: 'command line tool to manipulate PNOR flash')
